Add support for multi time frame data

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,3 +44,16 @@
     box-sizing: border-box;
     display: block;
 }
+
+.button-group {
+    display: flex;
+    gap: 10px;
+}
+
+.button-group button {
+    padding: 10px;
+    border: none;
+    background-color: #e0e0e0;
+    color: #333;
+    cursor: pointer;
+}
