--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 }
 
 .chartBox {
-    width: 800px;
+    width: 70vw;
     padding: 20px;
     border-radius: 20px;
     border: solid 3px rgba(54, 162, 235, 1);
